# yentericks-junkyard

./: Cargo.toml  LICENSE  README.md
src/: filesystem.rs  generators.rs  main.rs  view.rs
src/cli/: app.rs  mod.rs
src/cli/components/: confirmation_modal.rs  error_modal.rs  field_modal.rs  foreign_modal.rs  input_modal.rs  mod.rs  outline.rs  sidebar.rs
src/cli/events/: confirmation_choice.rs  mod.rs  page.rs  page_status.rs  pages.rs  screen_action.rs
src/cli/models/: mod.rs  template.rs
src/cli/pages/: fields.rs  mod.rs  models.rs  page.rs  template_selection.rs
src/cli/state/: app_state.rs  confirmation_state.rs  field_modal_state.rs  fields_state.rs  mod.rs  models_state.rs  sidebar_state.rs  template_selection_state.rs  template_selection_status.rs
src/cli/theme/: color_scheme.rs  mod.rs
src/filesystem/: directories.rs  files.rs
src/generators/: config.rs  controller.rs  core.rs  model.rs  project.rs  router.rs  utils.rs
src/models/: model.rs
src/templates/express-sequelize/: config.ts  tsconfig.json
src/view/: app.rs  color_scheme.rs  field_box.rs  model_box.rs  screen_action.rs
templates/express-sequelize/: app.txt  controller.txt  database.txt  dotenv.txt  env.txt  index.txt  model.txt  package.txt  router.txt  tsconfig.txt  utils.txt
